# design-system

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .rustfmt.toml  .taplo.toml  CHANGELOG.md  Cargo.toml  DEVELOPING.md  README.md  commitlint.config.ts  eslint.config.mts  lint-staged.config.mts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mts  rolldown.config.mts  rollup.config.mts  rust-toolchain.toml  tsconfig.build.json  tsconfig.json  tsconfig.node.json  vite.config.mts  vitest.config.mts
.changeset/: angry-tigers-follow.md  beige-dodos-taste.md  better-needles-create.md  bold-turkeys-burn.md  checkbox-indeterminate.md  common-mice-hunt.md  config.json  cuddly-adults-own.md  forty-breads-divide.md  forty-pots-act.md  four-sheep-sort.md  full-tools-visit.md  gentle-ducks-play.md  khaki-kids-juggle.md  khaki-moose-enjoy.md  large-parrots-find.md  many-planets-begin.md  modern-carrots-cross.md  ninety-beans-arrive.md  pink-eyes-feel.md  pink-moose-enter.md  quick-rivers-cover.md  quick-taxis-cover.md  sixty-hoops-strive.md  slick-files-build.md  spotty-lamps-sip.md  spotty-melons-design.md  spotty-pets-sin.md  swc-plugin-jsx-marker-swc-core-bump.md  swc-plugin-styled-components-upstream-sync.md  tall-planes-thank.md  tame-buses-jog.md  tangy-doodles-sneeze.md  thirty-rats-watch.md  thirty-times-sing.md  three-emus-hug.md  tiny-times-cough.md  wicked-cups-build.md  wise-knives-smell.md
.github/workflows/: assign-reviewers.yml  bot.yml  changeset.yml  check-reviewers-merge-queue.yml  check-reviewers.yml  ci.yml  dev-release-cleanup.yml  dev-release.yml  libraries.yml  release.yml  reviewer.yml  reviewers.yml  storybook-cleanup.yml  storybook-nuke.yml  storybook-pr-close.yml  storybook-pr.yml  storybook-preview.yml  storybook.yml
.storybook/: StorybookThemeProvider.tsx  main.ts  preview.test.ts  preview.tsx  storybookTheme.ts  themes.ts
.storybook/docs/: CodeBlock.tsx  DocsContainerWrapper.tsx  DocsNavigation.tsx  EditInGitHubLink.tsx  Story.tsx  TableOfContents.tsx  Typography.tsx  highlight.css  utils.ts
bot/: changeset.ts  getChangedPackages.ts  index.ts  package.json  pnpm-lock.yaml  release.ts  review.test.ts  review.ts  storybook.ts  team.ts  tsconfig.json  util.ts
crates/swc-plugin-jsx-marker/: .npmignore  CHANGELOG.md  Cargo.toml  build.sh  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json
crates/swc-plugin-jsx-marker/__tests__/: wasm.test.ts
crates/swc-plugin-jsx-marker/__tests__/__snapshots__/: wasm.test.ts.snap
crates/swc-plugin-jsx-marker/__tests__/fixtures/: styled-chain.tsx  styled-components-ignore.tsx
crates/swc-plugin-jsx-marker/src/: lib.rs
crates/swc-plugin-jsx-marker/transform/: Cargo.toml
crates/swc-plugin-jsx-marker/transform/src/: lib.rs
crates/swc-plugin-jsx-marker/transform/tests/: fixture.rs
crates/swc-plugin-jsx-marker/transform/tests/fixture/basic/: input.tsx  output.tsx
crates/swc-plugin-jsx-marker/transform/tests/fixture/class-component/: input.tsx  output.tsx
crates/swc-plugin-jsx-marker/transform/tests/fixture/styled-chain/: input.tsx  output.tsx
crates/swc-plugin-styled-components/: CHANGELOG.md  Cargo.toml  build.sh  package.json  tsconfig.json
crates/swc-plugin-styled-components/__tests__/: wasm.test.ts
crates/swc-plugin-styled-components/__tests__/__snapshots__/: wasm.test.ts.snap
crates/swc-plugin-styled-components/src/: lib.rs
crates/swc-plugin-styled-components/transform/: Cargo.toml
crates/swc-plugin-styled-components/transform/src/: lib.rs
crates/swc-plugin-styled-components/transform/src/utils/: analyzer.rs  mod.rs
crates/swc-plugin-styled-components/transform/src/visitors/: display_name_and_id.rs  pure_annotation.rs  template_literals.rs
crates/swc-plugin-styled-components/transform/src/visitors/minify/: css.rs  css_placeholder.rs  regex_util.rs  visitor.rs
crates/swc-plugin-styled-components/transform/src/visitors/transpile_css_prop/: top_level_binding_collector.rs  transpile.rs
crates/swc-plugin-styled-components/transform/tests/: fixture.rs
crates/swc-plugin-styled-components/transform/tests/fixtures/track-the-imported-variable/: output.js
crates/swc-plugin-styled-components/transform/tests/fixtures/transpile-css-prop-ignored-libraries/: code.js  config.json  output.js
guides/: changesets.md
rolldown/: emitTypes.mts  generatePackageJson.mts
rollup/: emitTypes.mts  generatePackageJson.mts
shims/: react-hook-plugins.shim.d.ts
src/: index.ts  platform.ts  types.ts
src/cli/: addComments.ts  cli.ts  generateComments.ts
src/components/: index.ts
src/icons/: generate.ts  icons.ts  index.ts
src/provider/: ThemeProvider.tsx
src/storybook/: create.ts
(+299 files in other folders)
