[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
authors      = ["Teleport (Gravitational)"]
edition      = "2021"
homepage     = "https://github.com/gravitational/design-system"
license      = "Apache-2.0"
repository   = "https://github.com/gravitational/design-system.git"
rust-version = "1.70"

[workspace.dependencies]
Inflector                   = "0.11.4"
once_cell                   = "1.21.3"
regex                       = { version = "1.12.2", default-features = false }
rustc-hash                  = "2.1.1"
serde                       = "1.0.228"
serde_json                  = "1.0.145"
swc_atoms                   = "9.0.0"
swc_common                  = "17.0.1"
swc_core                    = "47.0.4"
swc_ecma_ast                = "18.0.0"
swc_ecma_parser             = "27.0.3"
swc_ecma_transforms         = "38.0.0"
swc_ecma_transforms_testing = "33.0.0"
swc_ecma_utils              = "24.0.0"
swc_ecma_visit              = "18.0.1"
swc_plugin_macro            = "1.1.0"
swc_plugin_proxy            = "18.0.0"
testing                     = "18.0.0"
tracing                     = "0.1.41"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = "symbols"
