[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
authors      = ["Teleport (Gravitational)"]
edition      = "2021"
homepage     = "https://github.com/gravitational/design-system"
license      = "Apache-2.0"
repository   = "https://github.com/gravitational/design-system.git"
rust-version = "1.85"

[workspace.dependencies]
Inflector                   = "0.11.4"
once_cell                   = "1.21.3"
regex                       = { version = "1.12.2", default-features = false }
rustc-hash                  = "2.1.1"
serde                       = "1.0.228"
serde_json                  = "1.0.145"
swc_atoms                   = "9.0.0"
swc_common                  = "21.0.1"
swc_core                    = "65.0.0"
swc_ecma_ast                = "23.0.0"
swc_ecma_parser             = "39.0.1"
swc_ecma_transforms         = "52.0.0"
swc_ecma_transforms_testing = "46.0.0"
swc_ecma_utils              = "29.1.0"
swc_ecma_visit              = "23.0.0"
swc_plugin_macro            = "1.1.0"
swc_plugin_proxy            = "23.0.0"
testing                     = "22.0.0"
tracing                     = "0.1.41"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = "symbols"
