[package]
description = "SWC plugin for adding an identifier to React components from any library"
edition = { workspace = true }
license = { workspace = true }
name = "swc_plugin_jsx_marker"
publish = false
rust-version = { workspace = true }
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jsx_marker = { path = "./transform" }
serde = { workspace = true }
serde_json = { workspace = true }
swc_atoms = { workspace = true }
swc_core = { workspace = true, features = ["ecma_plugin_transform"] }
swc_ecma_ast = { workspace = true }
swc_plugin_macro = { workspace = true }
swc_plugin_proxy = { workspace = true }
